welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:23: error: too many arguments for method faireV: ()Unit
	faireV(Color.YELLOW)
              ^MethodsPicture:24: error: too many arguments for method faireV: ()Unit
	faireV(Color.RED)
              ^MethodsPicture:25: error: too many arguments for method faireV: ()Unit
	faireV(Color.BLUE)
              ^MethodsPicture:26: error: too many arguments for method faireV: ()Unit
	faireV(Color.GREEN)
              ^