welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	def motif3(){
		def motif(){
		def marque(){
		baisseBrosse()
		leveBrosse()
	}
	def faireV(){
		avance()
		marque()
		avance()
		gauche()
		avance()
		marque()
		recule()
		droite()
		avance()
		marque()
		avance()
		gauche()
	}
	faireV(Color.YELLOW)
	faireV(Color.RED)
	faireV(Color.BLUE)
	faireV(Color.GREEN)
	}
	for (i <- 1 to 3){
		motif()
		avance(5)
	}
	gauche()
	avance(5)
	droite()
	}
	for (i <- 1 to 3){
		motif3()
	}
}
